# ride_service

./: Cargo.toml  README.md  build.rs  diesel.toml
migrations/2024-06-15-191018_create_ride/: down.sql  up.sql
proto/: ride.proto
src/: schema.rs
